tests/neg-custom-args/trait-extend-java-enum.scala
trait T extends java.lang.Enum[T] // error

class E extends T
